--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-mapnik-forked",
+  "name": "mapnik-fork",
   "description": "Tile rendering library for node, Fork from mapnik/node-mapnik, origin author is Dane Springmeyer <dane@mapbox.com> (mapnik.org)",
   "url": "https://github.com/Mengmengdu/node-mapnik/",
   "homepage": "",
